--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@storybook/addon-links": "^8.0.8",
     "@storybook/addon-onboarding": "^8.0.8",
     "@storybook/blocks": "^8.0.8",
+    "@storybook/client-logger": "^8.0.8",
+    "@storybook/core-events": "^8.0.8",
     "@storybook/nextjs": "^8.0.8",
     "@storybook/react": "^8.0.8",
     "@storybook/test": "^8.0.8",
@@ -40,7 +42,8 @@
     "prettier-plugin-tailwindcss": "^0.5.13",
     "storybook": "^8.0.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.91.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
