--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "postinstall": "husky"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.2",
