--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,12 @@
-nodeLinker: pnp
+# nodeLinker: pnp
 
-yarnPath: .yarn/releases/yarn-4.1.1.cjs
+# yarnPath: .yarn/releases/yarn-4.1.1.cjs
+
+packageExtensions:
+  '@storybook/nextjs@*':
+    dependencies:
+      'webpack': '*'
+  '@chromatic-com/storybook@*':
+    dependencies:
+      '@storybook/client-logger': '*'
+      '@storybook/core-events': '*'
